Adding prerequisite step for a nice out-of-the-box experience...
Signed-off-by: Per Hallsmark <per.hallsmark@windriver.com>

--- a/README
+++ b/README
@@ -3,6 +3,9 @@ reference distribution (Poky) and some useful layers (OpenEmbedded, TI etc).
 
 Small howto
 
+0. Prerequisites
+   Fedora: sudo yum install g++ diffstat chrpath texinfo SDL-devel
+
 1. clone repositories
    make clone
 
